JS done and some HTML change
finished the js, removed the win key and some html to simplify development.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="key" data-key="Enter">Enter</div>
         </div>
         <div class="row">
-            <div class="key" data-key="ShiftLeft">Shift</div>
+            <div class="key modifier" data-key="ShiftLeft">Shift</div>
             <div class="key" data-key="z">z</div>
             <div class="key" data-key="x">x</div>
             <div class="key" data-key="c">c</div>
@@ -67,14 +67,14 @@
             <div class="key" data-key=",">,</div>
             <div class="key" data-key=".">.</div>
             <div class="key" data-key="/">/</div>
-            <div class="key" data-key="ShiftRight">Shift</div>
+            <div class="key modifier" data-key="ShiftRight">Shift</div>
         </div>
         <div class="row">
-            <div class="key" data-key="CtrlLeft">Ctrl</div>
-            <div class="key" data-key="AltLeft">Alt</div>
-            <div class="key" data-key=" " style="width: 100%;">Space</div>
-            <div class="key" data-key="AltRight">Alt</div>
-            <div class="key" data-key="CtrlRight">Ctrl</div>
+            <div class="key modifier" data-key="CtrlLeft">Ctrl</div>
+            <div class="key modifier" data-key="AltLeft">Alt</div>
+            <div class="key space" data-key=" ">Space</div>
+            <div class="key modifier" data-key="AltRight">Alt</div>
+            <div class="key modifier" data-key="CtrlRight">Ctrl</div>
         </div>
     </div>
 
