CSS done, modified html for minimalist look

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div class="key" data-key="0">0</div>
             <div class="key" data-key="-">-</div>
             <div class="key" data-key="=">=</div>
-            <div class="key" data-key="Backspace">Backspace</div>
+            <div class="key" data-key="Backspace">bksp</div>
         </div>
         <div class="row">
-            <div class="key" data-key="Tab">Tab</div>
+            <div class="key" data-key="Tab">tab</div>
             <div class="key" data-key="q">q</div>
             <div class="key" data-key="w">w</div>
             <div class="key" data-key="e">e</div>
@@ -41,7 +41,7 @@
             <div class="key" data-key="\">\</div>
         </div>
         <div class="row">
-            <div class="key" data-key="CapsLock">CapsLock</div>
+            <div class="key modifier" data-key="CapsLock">CL</div>
             <div class="key" data-key="a">a</div>
             <div class="key" data-key="s">s</div>
             <div class="key" data-key="d">d</div>
@@ -53,7 +53,7 @@
             <div class="key" data-key="l">l</div>
             <div class="key" data-key=";">;</div>
             <div class="key" data-key="'">'</div>
-            <div class="key" data-key="Enter">Enter</div>
+            <div class="key" data-key="Enter">entr</div>
         </div>
         <div class="row">
             <div class="key modifier" data-key="ShiftLeft">Shift</div>
@@ -67,14 +67,14 @@
             <div class="key" data-key=",">,</div>
             <div class="key" data-key=".">.</div>
             <div class="key" data-key="/">/</div>
-            <div class="key modifier" data-key="ShiftRight">Shift</div>
+            <div class="key modifier" data-key="ShiftRight">shift</div>
         </div>
         <div class="row">
-            <div class="key modifier" data-key="CtrlLeft">Ctrl</div>
-            <div class="key modifier" data-key="AltLeft">Alt</div>
-            <div class="key space" data-key=" ">Space</div>
-            <div class="key modifier" data-key="AltRight">Alt</div>
-            <div class="key modifier" data-key="CtrlRight">Ctrl</div>
+            <div class="key modifier" data-key="CtrlLeft">ctrl</div>
+            <div class="key modifier" data-key="AltLeft">alt</div>
+            <div class="key space" data-key=" ">space</div>
+            <div class="key modifier" data-key="AltRight">alt</div>
+            <div class="key modifier" data-key="CtrlRight">ctrl</div>
         </div>
     </div>
 
