--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="key" data-key="Enter">entr</div>
         </div>
         <div class="row">
-            <div class="key modifier" data-key="ShiftLeft">Shift</div>
+            <div class="key modifier" data-key="ShiftLeft">shift</div>
             <div class="key" data-key="z">z</div>
             <div class="key" data-key="x">x</div>
             <div class="key" data-key="c">c</div>
